style.css
body {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  background: #333b44;
  font-family: monospace;
  color: #fafafa;
}

canvas {
  margin-top: 40px;
  background: #417703;
  border: 10px solid black;
}

h1 {
  text-decoration: underline;
}

h2 {
  padding: 20px;
}

.control-button {
  width: 100px;
  height: 100px;
  font-size: 50px;
  margin: 5px;
  border-radius: 10px;
  background-color: #770341;
  color: #fafafa;
}

.controls-up-down {
  display: flex;
  flex-direction: row;
}

.controls-left-right {
  display: flex;
  flex-direction: row;
}

